# tls-reputation

./: .gitignore  Makefile  README.md
ansible/: .gitignore  README.md  ansible.cfg  backend.yml  frontend.yml  probe.yml  proxy.yml  requirements.yml  site.yml  stun-probe.yml
ansible/inventory/: hosts.example.ini
ansible/inventory/group_vars/: all.yml
ansible/inventory/group_vars/all/: main.yml  vault.yml.example
ansible/inventory/group_vars/tlsrep_backend/: main.yml  vault.yml.example
ansible/inventory/group_vars/tlsrep_frontend/: main.yml
ansible/inventory/group_vars/tlsrep_proxy/: main.yml  vault.yml.example
ansible/roles/backend/defaults/: main.yml
ansible/roles/backend/handlers/: main.yml
ansible/roles/backend/tasks/: main.yml  uv.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/tests/: test_classify.py  test_fingerprint.py
backend/tlsrep/: __init__.py  classify.py  config.py  db.py  known.py  known_fingerprints.json  main.py  schema.sql
backend/tlsrep/routers/: internal.py  public.py
backend/tlsrep/tls/: __init__.py  clienthello.py  ja4.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/docker/: nginx.conf
frontend/src/: App.vue  api.js  embed.js  format.js  graph.js  main.js  router.js
frontend/src/assets/: base.css
frontend/src/components/: CopyText.vue  DataTable.vue  LookupInput.vue  Pagination.vue  SpreadBar.vue  StabilityBadge.vue  StatGrid.vue  ThemeToggle.vue
frontend/src/views/: AlpnWidget.vue  BrowseView.vue  DocsView.vue  FingerprintView.vue  GraphView.vue  HomeView.vue  NotFoundView.vue  SniView.vue
probe/: Dockerfile  README.md  pyproject.toml
probe/tlsrep_probe/: __init__.py  main.py  server.py
proxy/: .dockerignore  Dockerfile  pyproject.toml
proxy/tests/: test_guard.py
proxy/tlsrep_proxy/: __init__.py  guard.py  main.py  proxy.py  sink.py
stun-probe/: Dockerfile  pyproject.toml
stun-probe/stunprobe/: __init__.py  app.py  main.py  stun.py  widget.html
tools/: prune-randomizers.sql  prune-sni.sql
tools/fingerprint-matrix/: matrix.py
(+36 files in other folders)
