[project]
name = "tlsrep-probe"
version = "0.1.0"
description = "TLS server that answers with the reputation of a caller's ClientHello"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
# Standard library only.
dependencies = []

[project.scripts]
tlsrep-probe = "tlsrep_probe.main:main"

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tlsrep_probe"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py312"
