[project]
name = "tlsrep-stunprobe"
version = "0.1.0"
description = "WebRTC ICE/STUN forgery probe — init/consume API over a STUN server"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = ["fastapi>=0.115", "uvicorn>=0.30"]

[project.scripts]
tlsrep-stunprobe = "stunprobe.main:main"

[project.optional-dependencies]
dev = ["pytest>=8.3", "httpx>=0.27", "ruff>=0.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stunprobe"]

[tool.ruff]
line-length = 88
target-version = "py312"
